EXTRA_DIST=texi2dvi lightning.info \
	lightning.info-1 lightning.info-2 lightning.info-3

TEXI2DVI=$(srcdir)/texi2dvi --expand

info_TEXINFOS = lightning.texi 
EXTRA_TEXINFOS = u-lightning.texi p-lightning.texi
MOSTLYCLEANFILES = lightning.tmp

lightning_TEXINFOS = body.texi toc.texi using.texi porting.texi version.texi
u_lightning_TEXINFOS = body.texi toc.texi using.texi version.texi
p_lightning_TEXINFOS = body.texi toc.texi porting.texi version.texi
