INCLUDES = -I@top_srcdir@

noinst_LIBRARIES = libprimitives.a

libprimitives_a_SOURCES = \
	Unqualified.cc \
	Array.cc \
	Byte.cc \
	Char.cc \
	CharVector.cc \
	CharArray.cc \
	Exn.cc \
	Future.cc \
	General.cc \
	GlobalStamp.cc \
	Hole.cc \
	IEEEReal.cc \
	Int.cc \
	IntInf.cc \
	List.cc \
	Math.cc \
	Option.cc \
	Real.cc \
	Ref.cc \
	Remote.cc \
	String.cc \
	Thread.cc \
	UniqueString.cc \
	Unsafe.cc \
	UnsafeMap.cc \
	Vector.cc \
	Word8.cc \
	Word8Array.cc \
	Word8Vector.cc \
	Word31.cc \
	Word32.cc

EXTRA_DIST = \
	Array.icc \
	Word.icc \
	Vector.icc
