AC_INIT(GtkBinding.aml)
AC_LANG_CPLUSPLUS

dnl Check for preprocessor
AC_PATH_PROG(CPP, cpp)
if test -z $CPP; then
  AC_MSG_ERROR(unable to find preprocessor)
else
AC_MSG_RESULT($CPP)
fi

dnl Check for ozc
AC_CHECK_PROGS(OZC,ozc,NONE)
dnl Check for ozl
AC_CHECK_PROGS(OZL,ozl,NONE)
dnl Check for stoc
AC_CHECK_PROGS(STOC,alicec,NONE)

dnl Check for the GTK+ config tool
AC_PATH_PROG(GTKCONFIG, gtk-config)
if test -z $GTKCONFIG; then
    AC_MSG_ERROR(The gtk-config script, which is part of the GTK+ library, could no be found. Please make sure you have a working installation of GTK+ on your system, otherwise GTK+ support can not be enabled. GTK+ can be found at http://www.gtk.org)
fi

dnl Check for the right GTK+ version
AC_MSG_CHECKING(for GTK+ version)
GTKVERSION=`$GTKCONFIG --version`
case $GTKVERSION in
  1.2.*)
  AC_MSG_RESULT($GTKVERSION)
  ;;
  1.3.*)
  AC_MSG_RESULT($GTKVERSION)
  ;;
  *)  AC_MSG_ERROR(Your GTK+ library is too old. Please update to version 1.2 or later. GTK+ can be found at http://www.gtk.org)
esac

dnl Checking for canvas
AC_MSG_CHECKING(for --with-gtk-canvas-dir)
AC_ARG_WITH(gtk_canvas_dir,
    [--with-gtk-canvas-dir=<d>    GTK+ Canvas directory. (default=none)])
case $with_gtk_canvas_dir in
  none)
    AC_MSG_RESULT(disabled canvas)
    HAVE_CANVAS=no
    ;;
  *)
    AC_MSG_RESULT($with_gtk_canvas_dir)
    HAVE_CANVAS=yes
    CANVASDIR=$with_gtk_canvas_dir
    ;;
esac
AC_SUBST(HAVE_CANVAS)
AC_SUBST(CANVASDIR)

AC_OUTPUT(Makefile)

