INCLUDES = -I@top_srcdir@

noinst_LIBRARIES = libsystem.a

libsystem_a_SOURCES = \
	UnsafeConfig.cc \
	UnsafeIODesc.cc \
	UnsafeOS.cc \
	UnsafeUnix.cc \
	UnsafeCommandLine.cc \
	UnsafeComponent.cc \
	UnsafeDebug.cc \
	UnsafeDebugger.cc \
	UnsafeSignal.cc \
	UnsafeSocket.cc \
	UnsafeRand.cc \
	UnsafeValue.cc \
	UnsafeReflect.cc \
	UnsafeStore.cc \
	UnsafeForeign.cc \
	UnsafeDate.cc \
	UnsafeTime.cc \
	UnsafeByteCode.cc

EXTRA_DIST = SysErr.icc
